--- a/assets/sass/components/_section.scss
+++ b/assets/sass/components/_section.scss
@@ -1,6 +1,6 @@
 .section {
   &__card {
-    padding: 1rem 0.75rem 2rem 0.75rem;
+    padding: 1rem 0.75rem 4rem 0.75rem;
     position: relative;
 
     @media only screen and (max-width: 960px) {
@@ -20,6 +20,12 @@
       margin: 2rem 0;
 
       @include flexbox();
+    }
+
+    &--button {
+      &-wrapper {
+        padding : 10px;
+      }
     }
 
     &--title {
@@ -45,9 +51,14 @@
       padding: 0.5rem 0;
       @include flexbox();
       flex-wrap: wrap;
+
+      > * {
+        margin: 5px !important;
+      }
     }
 
     &--item {
+      border: 1px solid #ffffff0d;
       justify-content: center;
       align-self: center;
       width: 33.33%;
@@ -55,7 +66,7 @@
 
       @include flex-grow(1);
 
-      margin: 1rem 0 1rem 0;
+      // margin: 1rem 0 1rem 0;
       // &:not(:first-child):not(:last-child) {
       //   margin: 0 1rem;
       // }
@@ -67,6 +78,8 @@
       // &:last-child {
       //   margin: 0 0 0 1rem;
       // }
+
+      margin: -5px;
     }
 
     &--img {
@@ -74,16 +87,17 @@
       display: block;
 
       &-wrapper {
-        width: 100%;
-        margin-bottom: 1rem;
+        max-width: 128px;
+        margin : auto;
+        padding: 1rem;
       }
     }
 
     &--content {
       margin-bottom: 0.75rem;
-      font-size: 1.125rem;
+      font-size: 1.325rem;
       word-wrap: break-word;
-      min-height: 80px;
+      min-height: 120px;
     }
 
     @media only screen and (max-width: 960px) {
@@ -123,12 +137,13 @@
 
   &__normal {
     position: relative;
+    margin: 12px 0;
 
     @include flexbox();
 
     &--content {
       margin-bottom: 0.75rem;
-      font-size: 1.125rem;
+      font-size: 1.325rem;
       word-wrap: break-word;
     }
 
@@ -152,6 +167,7 @@
       height: 100%;
 
       &-wrapper {
+        max-width: 128px;
         margin: auto 0;
         padding: 0 1rem;
 
