--- a/layouts/partials/main/landing/section-project.html
+++ b/layouts/partials/main/landing/section-project.html
@@ -45,9 +45,11 @@
             {{ end }} -->
             {{ if .button }}
               {{ with .button }}
+              <div class="section__card--button-wrapper">
                 <a href="{{ .link }}" class="section__card--item" target="{{ .target }}" rel="{{ if eq .target "_blank" }}noreferrer{{ end }}">
                   <button class="section__btn section__btn--{{ .size }}" style="background-color: {{ .bgcolor }}; color: {{ .color }};">{{ .name }}</button>
                 </a>
+              </div>
               {{ end }}
             {{ else }}
               <div class="section__card--item"></div>
