--- a/assets/sass/components/_section.scss
+++ b/assets/sass/components/_section.scss
@@ -98,6 +98,7 @@
       font-size: 1.325rem;
       word-wrap: break-word;
       min-height: 120px;
+      padding: 10px;
     }
 
     @media only screen and (max-width: 600px) {
