--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -49,4 +49,5 @@ $dark: (
   tag-text-background-color: #595B5C,
   content-box-border-color: #616161,
   content-box-background-color: #403E41,
+  navbar-title-color : #ffffff,
 );
