--- a/assets/sass/themes/_light.scss
+++ b/assets/sass/themes/_light.scss
@@ -49,4 +49,5 @@ $light: (
   tag-text-background-color: #eee,
   content-box-border-color: #aaa,
   content-box-background-color: #eeeeee,
+  navbar-title-color : #000000,
 );
