--- a/assets/sass/components/_tab.scss
+++ b/assets/sass/components/_tab.scss
@@ -19,6 +19,7 @@
     cursor: pointer;
     font-size: 13.8px;
     font-family: $title-font;
+    padding-bottom : 0.35rem;
     text-transform: capitalize;
     padding: 0.5rem 0.75rem;
     border-top-left-radius: 0.25rem;
