--- a/assets/sass/components/_tab.scss
+++ b/assets/sass/components/_tab.scss
@@ -21,7 +21,7 @@
     font-family: $title-font;
     padding-bottom : 0.35rem;
     text-transform: capitalize;
-    padding: 0.5rem 0.75rem;
+    padding: 0.5rem 0.75rem 0.35rem 0.75rem;
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem;
     
