--- a/layouts/partials/main/component/toggle-sidebar.html
+++ b/layouts/partials/main/component/toggle-sidebar.html
@@ -14,10 +14,10 @@
       <input id="toggle-sidebar" aria-label="Toggle Sidebar Visibility" type="checkbox" checked />
       <span class="slider">
         <span class="slider__icon {{ if (ne ($.Param "languagedir") "rtl") }}{{ else }}hide{{ end }}">
-          {{ partial "svgs/arrow-forward.svg" (dict "width" 20 "height" 20) }}
+          {{ partial "svgs/expand-screen.svg" (dict "width" 20 "height" 20) }}
         </span>
         <span class="slider__icon {{ if (ne ($.Param "languagedir") "rtl") }}hide{{ end }}">
-          {{ partial "svgs/arrow-back.svg" (dict "width" 20 "height" 20) }}
+          {{ partial "svgs/shrink-screen.svg" (dict "width" 20 "height" 20) }}
         </span>
       </span>
     {{ end }}
